--- a/styles.css
+++ b/styles.css
@@ -7,3 +7,78 @@
 body {
   font-family: system-ui;
 }
+
+h2 {
+  color: hotpink;
+  font-family: cursive;
+  font-size: 2rem;
+}
+.question {
+  font-family: cursive;
+  color: black;
+  text-align: center;
+}
+.Show-Answer {
+  color: white;
+  background-color: hotpink;
+  border-color: hotpink;
+  box-shadow: none;
+  border-radius: 10px;
+  padding: 20px 30px;
+  text-align: center;
+  position: relative;
+  top: 2rem;
+  left: 6rem;
+}
+
+.html {
+  color: grey;
+  background-color: white;
+  border-color: grey;
+  box-shadow: none;
+  border-radius: 30px;
+  justify-content: space-evenly;
+  align-items: baseline;
+  position: relative;
+  top: 6rem;
+  right: 9rem;
+}
+
+.css {
+  color: grey;
+  background-color: white;
+  border-color: grey;
+  box-shadow: none;
+  border-radius: 30px;
+  justify-content: space-evenly;
+  align-items: baseline;
+  position: relative;
+  top: 6rem;
+  right: 9rem;
+}
+
+.flexbox {
+  color: grey;
+  background-color: white;
+  border-color: grey;
+  box-shadow: none;
+  border-radius: 30px;
+  justify-content: space-evenly;
+  align-items: baseline;
+  position: relative;
+  top: 6rem;
+  right: 9rem;
+}
+
+.positioning {
+  color: grey;
+  background-color: white;
+  border-color: grey;
+  box-shadow: none;
+  border-radius: 30px;
+  justify-content: space-evenly;
+  align-items: baseline;
+  position: relative;
+  top: 6rem;
+  right: 9rem;
+}
