--- a/styles.css
+++ b/styles.css
@@ -2,83 +2,73 @@
 *::before,
 *::after {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 body {
   font-family: system-ui;
 }
 
-h2 {
-  color: hotpink;
-  font-family: cursive;
-  font-size: 2rem;
+.header {
+  background-color: lightblue;
+  text-align: center;
+  padding: 0.5rem;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
+
+.quiz-card {
+  border: 1px solid black;
+  border-radius: 10px;
+  padding: 1.5rem;
+  margin: 3rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  position: relative;
+}
+
+.bookmark-button {
+  background: none;
+  border: none;
+  position: absolute;
+  top: -15px;
+  right: 10px;
+}
+
 .question {
   font-family: cursive;
-  color: black;
+  font-size: 18px;
+  color: hotpink;
   text-align: center;
 }
-.Show-Answer {
+
+.show-answer-button {
   color: white;
   background-color: hotpink;
-  border-color: hotpink;
+  border: none;
   border-radius: 10px;
-  padding: 20px 30px;
-  display: flex;
-  box-align: center;
+  padding: 0.7rem;
   margin: auto;
 }
 
-.html {
+.category-tag {
   color: grey;
-  background-color: white;
   border-color: grey;
-  border-radius: 30px;
-  justify-content: space-evenly;
-  position: absolute;
-  display: flex;
-  box-align: center;
-  margin: auto;
+  font-size: 14px;
+  border: 1px solid black;
+  border-radius: 10px;
+  padding: 0.2rem;
 }
 
-.css {
-  color: grey;
-  background-color: white;
-  border-color: grey;
-  border-radius: 30px;
-  justify-content: space-evenly;
-  position: absolute;
-  display: flex;
-  box-align: center;
-  margin: auto;
-}
-
-.flexbox {
-  color: grey;
-  background-color: white;
-  border-color: grey;
-  border-radius: 30px;
-  justify-content: space-evenly;
-  position: absolute;
-  display: flex;
-  box-align: center;
-  margin: auto;
-}
-
-.positioning {
-  color: grey;
-  background-color: white;
-  border-color: grey;
-  border-radius: 30px;
-  justify-content: space-evenly;
-  align-items: baseline;
-  position: absolute;
-  display: flex;
-  box-align: left;
-  margin: auto;
-}
 .nav {
-  background-color: red;
+  background-color: lightblue;
   position: fixed;
   bottom: 0;
+  display: flex;
+  justify-content: space-around;
+  width: 100%;
+  height: 3rem;
+  align-items: center;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
